@@ -46,6 +46,7 @@ import com.sun.source.doctree.UnknownInlineTagTree;
 import com.sun.source.doctree.ValueTree;
 import com.sun.source.doctree.VersionTree;
 import com.sun.source.tree.*;
+import com.sun.source.tree.CaseTree.CaseKind;
 import com.sun.source.tree.MemberReferenceTree.ReferenceMode;
 import com.sun.source.tree.Tree.Kind;
 import com.sun.tools.javac.code.BoundKind;
@@ -60,18 +61,23 @@ import com.sun.tools.javac.code.TypeTag;
 import com.sun.tools.javac.jvm.ClassReader;
 import com.sun.tools.javac.model.JavacElements;
 import com.sun.tools.javac.model.JavacTypes;
+import com.sun.tools.javac.tree.DCTree;
 import com.sun.tools.javac.tree.DocTreeMaker;
 import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.tree.JCTree.*;
+import com.sun.tools.javac.tree.JCTree.JCCaseLabel;
+import com.sun.tools.javac.tree.TreeMaker;
 import com.sun.tools.javac.util.DiagnosticSource;
 import com.sun.tools.javac.util.ListBuffer;
 import com.sun.tools.javac.util.Name;
 import com.sun.tools.javac.util.Names;
 import com.sun.tools.javac.util.Context;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import javax.lang.model.element.*;
 import javax.lang.model.type.ArrayType;
 import javax.lang.model.type.TypeKind;
@@ -80,7 +86,6 @@ import javax.lang.model.util.Elements;
 import javax.lang.model.util.Types;
 import javax.tools.JavaFileObject;
 import org.netbeans.api.annotations.common.NonNull;
-import org.netbeans.modules.java.source.TreeShims;
 import static org.netbeans.modules.java.source.save.PositionEstimator.*;
 
 /**
@@ -195,104 +200,62 @@ public class TreeFactory {
     
     public BreakTree Break(CharSequence label) {
         Name n = label != null ? names.fromString(label.toString()) : null;
-        try {
-            return make.at(NOPOS).Break(n);
-        } catch (NoSuchMethodError err) {
-            try {
-                return (BreakTree) make.getClass().getMethod("Break", JCExpression.class).invoke(make.at(NOPOS), label != null ? Identifier(label) : null);
-            } catch (Throwable t) {
-                err.addSuppressed(t);
-                throw throwAny(err);
-            }
-        }
+        return make.at(NOPOS).Break(n);
     }
     
-    public BreakTree Break(ExpressionTree value) {
-        try {
-            return (BreakTree) make.getClass().getMethod("Break", JCExpression.class).invoke(make.at(NOPOS), (JCExpression) value);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+    public YieldTree Yield(ExpressionTree value) {
+        return make.at(NOPOS).Yield((JCExpression) value);
     }
     
+    public DefaultCaseLabelTree DefaultCaseLabel() {
+        return make.at(NOPOS).DefaultCaseLabel();
+    }
+
+    public ConstantCaseLabelTree ConstantCaseLabel(ExpressionTree expr) {
+        return make.at(NOPOS).ConstantCaseLabel((JCExpression) expr);
+    }
+
+    public PatternCaseLabelTree PatternCaseLabel(PatternTree pat, ExpressionTree guard) {
+        return make.at(NOPOS).PatternCaseLabel((JCPattern) pat, (JCExpression) guard);
+    }
+
+    public DeconstructionPatternTree DeconstructionPattern(ExpressionTree deconstructor, List<? extends PatternTree> nested, VariableTree var) {
+        ListBuffer<JCPattern> pats = new ListBuffer<>();
+        for (PatternTree t : nested)
+            pats.append((JCPattern)t);
+        return make.at(NOPOS).RecordPattern((JCExpression) deconstructor, pats.toList(), (JCVariableDecl) var);
+    }
+
     public CaseTree Case(ExpressionTree expression, List<? extends StatementTree> statements) {
-        ListBuffer<JCStatement> lb = new ListBuffer<JCStatement>();
-        for (StatementTree t : statements)
-            lb.append((JCStatement)t);
-        try {
-            return make.at(NOPOS).Case((JCExpression)expression, lb.toList());
-        } catch (NoSuchMethodError err) {
-            try {
-                Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-                com.sun.tools.javac.util.List<? extends Object> pats = expression != null ? com.sun.tools.javac.util.List.of((JCExpression)expression) : com.sun.tools.javac.util.List.nil();
-                return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "STATEMENT"), pats, lb.toList(), null);
-            } catch (Throwable t) {
-                err.addSuppressed(t);
-                throw throwAny(err);
-            }
-        }
+        return Case(expression != null ? Collections.singletonList(expression) : Collections.emptyList(), statements);
     }
     
     public CaseTree Case(List<? extends ExpressionTree> expressions, List<? extends StatementTree> statements) {
-        switch (expressions.size()) {
-            case 0: return Case((ExpressionTree) null, statements);
-            case 1: return Case(expressions.get(0), statements);
-        }
-        ListBuffer<JCStatement> lb = new ListBuffer<JCStatement>();
-        for (StatementTree t : statements)
-            lb.append((JCStatement)t);
-        ListBuffer<JCExpression> exprs = new ListBuffer<>();
-        for (ExpressionTree t : expressions)
-            exprs.append((JCExpression)t);
-        try {
-            Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-            return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "STATEMENT"), exprs.toList(), lb.toList(), null);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+        return CaseMultiplePatterns(expressions.isEmpty() ? Collections.singletonList(DefaultCaseLabel()) : expressions.stream().map(e -> ConstantCaseLabel(e)).collect(Collectors.toList()), statements);
     }
     
     public CaseTree Case(List<? extends ExpressionTree> expressions, Tree body) {
-        ListBuffer<JCStatement> lb = new ListBuffer<>();
-        lb.append(body instanceof ExpressionTree ? (JCStatement) Break((ExpressionTree) body) : (JCStatement) body);
-        ListBuffer<JCExpression> exprs = new ListBuffer<>();
-        for (ExpressionTree t : expressions)
-            exprs.append((JCExpression)t);
-        try {
-            Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-            return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "RULE"), exprs.toList(), lb.toList(), body);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+        return CaseMultiplePatterns(expressions.isEmpty() ? Collections.singletonList(DefaultCaseLabel()) : expressions.stream().map(e -> ConstantCaseLabel(e)).collect(Collectors.toList()), body);
     }
     
-    public CaseTree CaseMultiplePatterns(List<? extends Tree> expressions, Tree body) {
+    public CaseTree CaseMultiplePatterns(List<? extends CaseLabelTree> expressions, Tree body) {
         ListBuffer<JCStatement> lb = new ListBuffer<>();
-        lb.append(body instanceof ExpressionTree ? (JCStatement) Break((ExpressionTree) body) : (JCStatement) body);
-        ListBuffer<JCTree> exprs = new ListBuffer<>();
+        lb.append(body instanceof ExpressionTree ? (JCStatement) Yield((ExpressionTree) body) : (JCStatement) body);
+        ListBuffer<JCCaseLabel> exprs = new ListBuffer<>();
         for (Tree t : expressions)
-            exprs.append((JCTree)t);
-        try {
-            Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-            return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "RULE"), exprs.toList(), lb.toList(), body);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+            exprs.append((JCCaseLabel)t);
+        return make.at(NOPOS).Case(CaseKind.RULE, exprs.toList(), lb.toList(), (JCTree) body);
     }
     
-    public CaseTree CaseMultiplePatterns(List<? extends Tree> expressions, List<? extends StatementTree> statements) {
+
+    public CaseTree CaseMultiplePatterns(List<? extends CaseLabelTree> expressions, List<? extends StatementTree> statements) {
         ListBuffer<JCStatement> lb = new ListBuffer<JCStatement>();
         for (StatementTree t : statements)
             lb.append((JCStatement)t);
-        ListBuffer<JCTree> exprs = new ListBuffer<>();
+        ListBuffer<JCCaseLabel> exprs = new ListBuffer<>();
         for (Tree t : expressions)
-            exprs.append((JCTree)t);
-        try {
-            Class<Enum> caseKind = (Class<Enum>) Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCTree.class.getClassLoader());
-            return (CaseTree) make.getClass().getMethod("Case", caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class).invoke(make.at(NOPOS), Enum.valueOf(caseKind, "STATEMENT"), exprs.toList(), lb.toList(), null);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+            exprs.append((JCCaseLabel)t);
+        return make.at(NOPOS).Case(CaseKind.STATEMENT, exprs.toList(), lb.toList(), null);
     }
     
     public CatchTree Catch(VariableTree parameter, BlockTree block) {
@@ -836,8 +799,12 @@ public class TreeFactory {
         return make.at(NOPOS).Switch((JCExpression)expression, cases.toList());
     }
 
-    public Tree SwitchExpression(ExpressionTree expression, List<? extends CaseTree> caseList) {
-        return TreeShims.SwitchExpression(make.at(NOPOS), expression, caseList);
+    public SwitchExpressionTree SwitchExpression(ExpressionTree expression, List<? extends CaseTree> caseList) {
+        ListBuffer<JCTree.JCCase> cases = new ListBuffer<JCTree.JCCase>();
+        for (CaseTree t : caseList) {
+            cases.append((JCTree.JCCase) t);
+        }
+        return make.at(NOPOS).SwitchExpression((JCExpression) expression, cases.toList());
     }
 
     public SynchronizedTree Synchronized(ExpressionTree expression, BlockTree block) {
@@ -951,12 +918,12 @@ public class TreeFactory {
         }
     }
     
-    public Tree BindingPattern(VariableTree vt) {
-        try {
-            return (Tree) make.getClass().getMethod("BindingPattern",JCVariableDecl.class).invoke(make.at(NOPOS), vt);
-        } catch (Throwable t) {
-            throw throwAny(t);
-        }
+    public BindingPatternTree BindingPattern(VariableTree vt) {
+        return make.at(NOPOS).BindingPattern((JCVariableDecl) vt);
+    }
+
+    public ParenthesizedPatternTree ParenthesizedPattern(PatternTree pattern) {
+        return make.at(NOPOS).ParenthesizedPattern((JCPattern) pattern);
     }
 
     public VariableTree Variable(VariableElement variable, ExpressionTree initializer) {
@@ -1735,7 +1702,7 @@ public class TreeFactory {
         }
         return copy;
     }
-    
+
     /**
      * Represents operation on list
      */
@@ -1818,6 +1785,14 @@ public class TreeFactory {
     
     public DocCommentTree DocComment(List<? extends DocTree> fullBody, List<? extends DocTree> tags) {
         return docMake.at(NOPOS).newDocCommentTree(fullBody, tags);
+    }
+    
+    public DocTree Snippet(List<? extends DocTree> attributes, TextTree text){
+        try {
+            return (DocTree) docMake.getClass().getMethod("newSnippetTree", List.class, TextTree.class).invoke(docMake.at(NOPOS), attributes, text);
+        } catch (Throwable t) {
+            throw throwAny(t);
+        }
     }
     
     public DocCommentTree DocComment(List<? extends DocTree> firstSentence, List<? extends DocTree> body, List<? extends DocTree> tags) {
@@ -1951,19 +1926,15 @@ public class TreeFactory {
     }
 
     public ReferenceTree Reference(ExpressionTree qualExpr, CharSequence member, List<? extends Tree> paramTypes) {
-        com.sun.tools.javac.util.List<JCTree> paramTypesList = null;
+        com.sun.tools.javac.util.List<JCTree> paramTypesParam = null;
         if (paramTypes != null) {
             ListBuffer<JCTree> lbl = new ListBuffer<>();
             for (Tree t : paramTypes) {
                 lbl.append((JCTree) t);
             }
-            paramTypesList = lbl.toList();
+            paramTypesParam = lbl.toList();
         }
-        ReferenceTree refrenceTree = TreeShims.getRefrenceTree(docMake, qualExpr, member, paramTypes, names, paramTypesList);
-        if (refrenceTree != null) {
-            return refrenceTree;
-        }
-        return docMake.at(NOPOS).newReferenceTree("", (JCExpression) qualExpr, member != null ? (Name) names.fromString(member.toString()) : null, paramTypesList);
+        return docMake.at(NOPOS).newReferenceTree("", (JCTree.JCExpression) qualExpr, qualExpr == null ? null : ((JCTree.JCExpression) qualExpr).getTree(), member != null ? (com.sun.tools.javac.util.Name) names.fromString(member.toString()) : null, paramTypesParam);
     }
     
     @SuppressWarnings("unchecked")
